# hedged

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: observe.rs
examples/: basic.rs  hedged_reqwest.rs
src/: lib.rs
