[package]
name = "hedged"
version = "0.1.1"
edition = "2021"
authors = [ "Antonin Amand <antonin.amand@gmail.com>" ]
license-file = "LICENSE"
description = "A \"Hedged Requests\" implementation as described in \"The Tail at Scale\" paper"
keywords = ["distributed", "async"]
repository = "https://github.com/gwik/hedged"
documentation = "https://docs.rs/hedged"

[features]
default = []
tokio = ["dep:tokio"]

[dependencies]
histogram = "0.8"
thiserror = "1"
tokio = { version = "1", features = ["macros", "time"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
anyhow = { version = "1", features = ["backtrace"] }
criterion = { version = "0.4", features = ["html_reports"] }
poem = "1"
rand = "0.8"
reqwest = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hedged = { path = ".", features = ["tokio"] }

[[bench]]
name = "observe"
harness = false
